# zellij-tiptab

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dev-docker.template.kdl  justfile
.github/workflows/: build.yml
lib/: tiptab-hook.sh
src/: bin_parser.rs  formatter.rs  main.rs  parent_seek.rs  resolver.rs  tabs.rs  validation.rs  worker.rs
